--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,9 @@
 == README
 
+Description: 
+
+This is a rails based web application. 
+
 This README would normally document whatever steps are necessary to get the
 application up and running.
 
